# datawarehousing-example-nyc-vehicle-incidents

./: .gitignore  Analysis.md  Cargo.toml  LICENSE  README.md  multi-dimensional-schema.drawio  notepad.txt
analysis/: Analysis.md
data/: crashes_preview.csv  moon.csv  persons_preview.csv  weather.csv
src/: ingestion.rs  lib.rs  main.rs
src/base_database/: crash.rs  mod.rs  person.rs  time.rs
src/base_database/sql/: ddl.sql
src/data_mart/: contributing_factor.rs  fact.rs  mod.rs  person_age.rs  person_position.rs  person_role.rs  person_sex.rs  person_type.rs  time.rs
src/data_mart/sql/: ddl.sql
src/output/: sql.rs
src/raw/: crashes.rs  mod.rs  moon.rs  persons.rs  weather.rs
