[package]
name = "datawarehousing-example-nyc-vehicle-incidents"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = {version = "0.3.47", features = ["local-offset", "macros", "formatting", "serde", "parsing"]}
